name:                bookshelf
version:             0.1.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bookshelf
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.9
                     , QuickCheck >= 2.8
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , bookshelf
                     , aeson
                     , hspec >= 2.2
                     , QuickCheck
  ghc-options:         -Wall
  default-language:    Haskell2010
